# work-pulse-checker

./: build-exe.bat  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  prediction.rs  windows_activity.rs
